CS 536/pr5/tests/errors/ReturnValVoidFunction.minc
void KindaCoolFuntion()
{
	return 666;
}
